PivotConfig: Basic UI for store/restore of the configuration
Also did a small bugfix on the interface of IPivotConfigStorage. The UI
is functional, but not really pretty at the moment.

--- a/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/wicket-package_de.properties
+++ b/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/wicket-package_de.properties
@@ -10,3 +10,9 @@ autoCalculate=Automatisch berechnen
 showPivot=Pivot anzeigen
 
 downloadAs=Herunterladen als ${}
+
+loadSaveConfiguration=Konfiguration laden/speichern
+loadConfiguration=Laden
+deleteConfiguration=Löschen
+saveConfiguration=Konfiguration speichern
+savedConfigurations=Ihre gespeicherten Konfigurationen:
